src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Comments2__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SRNO__c</fullName>
        <description>For tracking DM Activity</description>
        <label>SRNO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>aircall__Answered_by__c</fullName>
        <description>Aircall user who answered the call.</description>
        <label>Answered by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aircall__Call_Recording__c</fullName>
        <description>Aircall call recording</description>
        <label>Call Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>aircall__Connection_status__c</fullName>
        <formula>IF( aircall__Has_connected__c , &apos;Connected&apos;, &apos;Not connected&apos;)</formula>
        <label>Connection status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aircall__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aircall__Detailed_type__c</fullName>
        <formula>IF(CONTAINS(LOWER(Subject), &apos;missed&apos;), &apos;Missed call&apos;,
 IF(CONTAINS(LOWER(Subject), &apos;voicemail&apos;), &apos;Voicemail&apos;,
 IF(CONTAINS(LOWER(Subject), &apos;outbound unanswered&apos;), &apos;Outbound unanswered&apos;,
 IF(CONTAINS(LOWER(Subject), &apos;outbound&apos;), &apos;Outbound answered&apos;,
 IF(CONTAINS(LOWER(Subject), &apos;inbound&apos;), &apos;Inbound answered&apos;,
  TEXT(CallType) 
)))))</formula>
        <label>Detailed type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aircall__Has_connected__c</fullName>
        <formula>ISPICKVAL(CallType, &apos;Inbound&apos;) &amp;&amp;  !aircall__Is_Missed_call__c &amp;&amp;  !aircall__Is_Voicemail__c</formula>
        <label>Has connected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>aircall__Hour_of_the_day__c</fullName>
        <formula>LEFT(TEXT(TIMEVALUE(DATETIMEVALUE(CreatedDate) + aircall__Timezone__c/24)), 2)+&apos;:00&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hour of the day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aircall__Is_Missed_call__c</fullName>
        <formula>BEGINS(LOWER(Subject), &apos;missed call&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Missed call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>aircall__Is_Voicemail__c</fullName>
        <formula>BEGINS(&apos;voicemail&apos;, LOWER(Subject))</formula>
        <label>Is Voicemail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>aircall__Missed_Call_Ratio__c</fullName>
        <formula>IF(CONTAINS(CallDisposition, &quot;out_of_opening_hours&quot;), &quot;Out of opening hours&quot;, 
IF(CONTAINS(CallDisposition, &quot;no_available_agent&quot;), &quot;No available agent&quot;, 
IF(CONTAINS(CallDisposition, &quot;abandoned_in_ivr&quot;), &quot;Abandoned in IVR&quot;, 
IF(CONTAINS(CallDisposition, &quot;short_abandoned&quot;), &quot;Short abandoned&quot;, 
IF(CONTAINS(CallDisposition, &quot;agents_did_not_answer&quot;), &quot;Agents did not response&quot;, NULL)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Missed Call Ratio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aircall__Phone_number__c</fullName>
        <label>Aircall number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>aircall__Timezone__c</fullName>
        <formula>(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 00:00:00&quot;)) - TODAY()) + 

(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 01:00:00&quot;)) - TODAY()) + 

(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 02:00:00&quot;)) - TODAY()) + 

(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 03:00:00&quot;)) - TODAY()) + 

(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 04:00:00&quot;)) - TODAY()) + 

(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 05:00:00&quot;)) - TODAY()) + 

(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 06:00:00&quot;)) - TODAY()) + 

(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 07:00:00&quot;)) - TODAY()) + 

(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 08:00:00&quot;)) - TODAY()) + 

(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 09:00:00&quot;)) - TODAY()) + 

(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 10:00:00&quot;)) - TODAY()) + 

(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 11:00:00&quot;)) - TODAY()) + 

(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 12:00:00&quot;)) - TODAY()) + 

(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 13:00:00&quot;)) - TODAY()) + 

(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 14:00:00&quot;)) - TODAY()) + 

(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 15:00:00&quot;)) - TODAY()) + 

(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 16:00:00&quot;)) - TODAY()) + 

(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 17:00:00&quot;)) - TODAY()) + 

(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 18:00:00&quot;)) - TODAY()) + 

(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 19:00:00&quot;)) - TODAY()) + 

(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 20:00:00&quot;)) - TODAY()) + 

(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 21:00:00&quot;)) - TODAY()) + 

(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 22:00:00&quot;)) - TODAY()) + 

(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 23:00:00&quot;)) - TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timezone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>aircall__Transferred_to__c</fullName>
        <description>Aircall user to whom the call was transferred.</description>
        <label>Transferred to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aircall__Waiting_Time__c</fullName>
        <description>Time during which the caller waited in line before being connected with the callee.</description>
        <label>Waiting Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>